# iMentor-App-sleak

./: .geminiignore  .gitignore  Cargo.toml  FrameWorksinfo.md  MOBILE_ARCHITECTURE_ANALYSIS .docx  README.md  comparitive summary.md  description.md  push_log.txt  push_log2.txt  workspace.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/skills/tauri-local-llm/: SKILL.md
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml  cleanup-old-artifacts.yml
assets/: license.txt
assets/courses/algorithms/: manifest.json
assets/courses/artificial-intelligence/: manifest.json
assets/courses/data-structures/: manifest.json
assets/courses/jntuk-algorithms-toc/: manifest.json
assets/courses/jntuk-c-programming/: manifest.json
assets/courses/jntuk-data-structures-python/: manifest.json
assets/courses/jntuk-dbms-java/: manifest.json
assets/courses/jntuk-oop-cpp/: manifest.json
assets/courses/jntuk-os-networks/: manifest.json
assets/courses/jntuk-placement-prep/: manifest.json
assets/courses/jntuk-software-engineering/: manifest.json
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  message_bus.rs  orchestrator.rs
crates/chatbot-test/: Cargo.toml
crates/chatbot-test/src/: lib.rs
crates/chatbot-test/tests/: chatbot.rs  cs229_pdf_rag.rs  rag_quality_bench.rs
crates/inference/: Cargo.toml
crates/inference/src/: cpu_profile.rs  embedding.rs  lib.rs  model_manager.rs  session.rs
crates/model-bench/: Cargo.toml
crates/model-bench/src/: main.rs  rag_bench.rs  tfft_test.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunker.rs  document.rs  lib.rs  retriever.rs  vector_store.rs
crates/storage/: Cargo.toml
crates/storage/src/: chunk_store.rs  lib.rs  migrations.rs  session_store.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: deidentifier.rs  lib.rs  queue.rs  resolver.rs  sender.rs  session_serializer.rs
crates/wiki/: Cargo.toml
crates/wiki/src/: lib.rs  loader.rs  page.rs  search.rs
docs/: architecture.md  benchmark-summary.md  build-android.md  build-ios.md  runtime-contract-map.md  setup-ubuntu.md  setup-windows.md
docs/adr/: 0001-core-product-direction.md
frontend/: index.html  package.json  tsc-out.txt  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  index.css
frontend/src/components/: AgentSpawner.svelte  ChatPanel.svelte  CodeBlock.svelte  ConsentModal.svelte  CourseSelector.svelte  CourseUpdater.svelte  DemoFrame.svelte  DocumentUploader.svelte  FloatingChat.svelte  MessageBubble.svelte  ModelDownloader.svelte  PrereqCheck.svelte  QuizBlock.svelte  SettingsPanel.svelte  StudyChatPanel.svelte  WikiViewer.svelte
frontend/src/lib/: courseFlow.ts  stores.ts  tauri.ts
frontend/src/stores/: agentStore.ts  chatStore.ts  modeStore.ts
native-app/: README.md  app.json  package-lock.json  package.json  start.sh  tailwind.config.js
native-app/api/: index.js  package-lock.json  package.json  summary.md
native-app/api/controllers/: authController.js  chatController.js  ragController.js
native-app/api/middleware/: authMiddleware.js
native-app/api/models/: Conversation.js  Message.js  User.js
native-app/api/routes/: authRoutes.js  chatRoutes.js  ragRoutes.js
native-app/api/utils/: encryption.js
native-app/app/: _layout.tsx  index.tsx
native-app/src/app/: _layout.tsx  index.tsx  (+2 more)
nativeproject/: summary.md
reports/: BUILD_METRICS_COMPARISON.md  FIXES_VALIDATION_QWEN35.md  failed-files.txt  final-report-2026-06-01.md  playwright-rag-final.txt  playwright-rag-rerun.txt  playwright-results-2026-06-01T20-54-06.txt  playwright-results-2026-06-01T20-54-55.txt  playwright-results-2026-06-02T00-07-00.txt  test-installed-ui.txt  test-rag.txt  visual-intuition-audit-all-courses.csv  visual-intuition-audit-summary-by-course.csv  visual-intuition-caption-only.csv  visual-intuition-failures-all.csv  visual-intuition-gemini-state.txt  visual-intuition-missing-section.csv  visual-intuition-no-visual.csv
scripts/: bench-all-models.mjs  build-all-windows.ps1  course-quality-check.mjs  create-handoff.ps1  dev-setup.ps1  dev-tauri.ps1  download-models.ps1  download-wiki-images.py  download-wiki-models.ps1  gen-config.py  generate_icons.py  normalize_course_manifests.py  pick-native-file.py  run-model-matrix-retry.ps1  run-model-matrix.ps1  run-tests.ps1  test-agent-mode.mjs  test-all-models-efficient.mjs  test-all-models-thinking.mjs  test-animations-only.mjs  test-installed-playwright-metrics.mjs  test-installed-ui.mjs  test-installer.ps1  test-rag-and-animations.mjs
server/: Caddyfile  start.py  wiki_parser.py
server/api/: database.py  main.py  models.py  requirements.txt
server/dashboard/: admin.html  index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  models-gemma-e2b.toml  models-gemma-e4b.toml  models-qwen25.toml
src-tauri/capabilities/: default.json
src-tauri/src/: build_config.rs  lib.rs  license.rs  main.rs  runtime_tuning.rs  setup.rs  state.rs
src-tauri/src/commands/: agents.rs  chat.rs  consent.rs  course_updates.rs  courses.rs  debug.rs  deployment.rs  documents.rs  mod.rs  model_download.rs  settings.rs  system.rs
src-tauri/wix/: nsis-model-hooks.nsh
tests/: integration_test.py
tests/desktop-e2e/: agents.spec.ts  course-chat.spec.ts  course-crawl.spec.ts  general-chat.spec.ts  helpers.ts  latency-quality.spec.ts  metrics.ts  package.json  playwright.config.ts  rag-documents.spec.ts  smoke.spec.ts  stress.spec.ts  visualizations.spec.ts
tools/course_gen/: __init__.py  audit_courses.py  build_wiki.py  cli_expander.py  concept_extractor.py  config.py  course_loader.py  course_organizer.py  direct_api_generator.py  enhance_courses.py  fix_gifs.py  gemini_build_courses.py  gemini_client.py  gen_syllabi.py  generate_missing_visual_intuition_gemini.py  generate_wiki.py  llm_client.py  note_writer.py  rebuild_manifests.py  regen_manifest.py  requirements.txt  rewrite_thin_pages.py  run_all_courses.py  start-server.ps1  start-server.sh  syllabus_loader.py  syllabus_research_algorithms.json  textbook_expander.py  wiki_writer.py
(+351 files in other folders)
