[package]
name = "student-ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "student_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Vulkan GPU offload — pass through to the inference crate.
# cargo tauri build -- --features vulkan
vulkan = ["inference/vulkan"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
toml = "0.8"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }
sha2 = "0.10"
inference = { path = "../crates/inference" }
wiki = { path = "../crates/wiki" }
rag = { path = "../crates/rag" }
agents = { path = "../crates/agents" }
telemetry = { path = "../crates/telemetry" }
storage = { path = "../crates/storage" }
# Streaming HTTP downloads for GGUF model auto-download and course bundles
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
# ZIP extraction for course bundles
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
