[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[features]
# Enable Vulkan GPU offload via llama.cpp's Vulkan backend.
# ONLY passed when building gpu/gpu-withmodel variants.
# CPU builds (cpu / cpu-withmodel) must never set this feature.
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
# No GPU backend by default — Vulkan only activates via the feature above.
llama-cpp-2 = { version = "0.1", default-features = false }
llama-cpp-sys-2 = { version = "0.1", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
num_cpus = "1"
sysinfo = "0.30"
once_cell = "1"
