[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
futures = "0.3"
